--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,6 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <%= link_to "Friends", friends_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "About", home_about_path, class:"nav-link" %>
         </li>
       </ul>
