--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,14 +1,30 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Friends</h1>
+<h1>Friend List</h1>
 
 <div id="friends">
-  <% @friends.each do |friend| %>
-    <%= render friend %>
-    <p>
-      <%= link_to "Show this friend", friend %>
-    </p>
-  <% end %>
+  <table class="table table-hover table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">First name</th>
+      <th scope="col">Last name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody class="table-group-divider">
+    <% @friends.each do |friend| %>
+      <tr>
+        <td><%= friend.first_name %></td>
+        <td><%= friend.last_name %></td>
+        <td><%= friend.email %></td>
+        <td><%= friend.phone_number %></td>
+        <td><%= link_to "Show this friend", friend, class:"btn btn-sm btn-info" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+  </table>
 </div>
 
-<%= link_to "New friend", new_friend_path %>
+<%= link_to "New friend", new_friend_path, class:"btn btn-sm btn-success" %>
